Expanded METAR activity Added preparations for complications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="message">Watch face tapped</string>
     <string name="my_digital_name">METAR</string>
     <string name="title_activity_metar_fetch_data">METAR</string>
-    <string name="introtext">This part of the app is not yet functional.</string>
+    <string name="introtext">Loading...</string>
 </resources>
