--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="my_digital_name">METAR</string>
     <string name="title_activity_metar_fetch_data">METAR</string>
     <string name="introtext">Loading...</string>
+    <string name="emptystring"></string>
 </resources>
